Fix badge position on mobile

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -654,7 +654,7 @@ footer p {
 	max-width:100px;
 	min-width:60px;
 	position:fixed;
-	right:20px;
+	right:64px;
 	top:0;width:10%;
 	z-index:10000;
 }
